# APISearchEngine

./: LICENSE  README  README.md
Client/: Client.sln  Directory.Packages.props
Client/Client/: App.cs  App.xaml  App.xaml.cs  AppResources.xaml  Client.csproj  GlobalUsings.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
Client/Client.Shared/: AppHead.xaml  AppHead.xaml.cs
Client/Client.Tests/: Client.Tests.csproj  UnitTest1.cs
Client/Client.UITests/: Constants.cs  Given_MainPage.cs  TestBase.cs
Client/Client.Wasm/: Client.Wasm.csproj  LinkerConfig.xml  Program.cs  manifest.webmanifest
Client/Client.Wasm/Properties/: launchSettings.json
Client/Client.Wasm/WasmScripts/: AppManifest.js
Client/Client.Windows/: Client.Windows.csproj
Client/Client.Windows/Properties/: launchsettings.json
Client/Client/Models/: AppConfig.cs  Entity.cs  WeatherForecast.cs
Client/Client/Presentation/: MainModel.cs  MainPage.xaml  MainPage.xaml.cs  SecondModel.cs  SecondPage.xaml  SecondPage.xaml.cs  Shell.xaml  Shell.xaml.cs  ShellModel.cs
Client/Client/Properties/: launchSettings.json
Client/Client/Serialization/: WeatherForecastContext.cs
Client/Client/Services/Caching/: IWeatherCache.cs  WeatherCache.cs
Client/Client/Services/Endpoints/: DebugHandler.cs  IApiClient.cs
Client/Client/Strings/en/: Resources.resw
server/: Cargo.toml  dockerfile  test.tag.xml  xml.pest
server/src/: cors.rs  cppreference-doxygen-web.tag.xml  data.rs  lib.rs  main.rs  parser.rs  response.rs
