[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
derive_builder = "0.20.0"
pest = "2.7.10"
pest_derive = "2.7.10"
rocket = { version = "0.5.1", features = ["json"] }
thiserror = "1.0.61"
